evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_doc_comments.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const bindings = scope({

/** Severity levels for log output */LogLevel: [[[['===', "Debug"], '|', ['===', "Info"]], '|', ['===', "Warn"]], '|', ['===', "Error"]],
/** Application configuration settings */Config: {
  /** The API key used for authentication */  api_key: 'string',
  /** Request timeout in milliseconds */  timeout_ms: 'number'
},

});

const exported = bindings.export();

export const defaultConfig: Config = {
api_key: "",
timeout_ms: 0
};

export type LogLevel = typeof exported.LogLevel.infer;
export type Config = typeof exported.Config.infer;
