evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_durations.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
const durationNanos = (value: unknown): bigint | null => { if (typeof value === "bigint") return value; if (typeof value === "number") return Number.isInteger(value) ? BigInt(value) : null; if (typeof value === "object" && value !== null && "secs" in value && "nanos" in value) return typeof value.secs === "number" && typeof value.nanos === "number" ? BigInt(value.secs) * 1000000000n + BigInt(value.nanos) : null; const text = String(value); if (!/^(?:\d+(?:ns|us|µs|ms|s|m|h|d|w|y))+$/.test(text)) return null; const units: Record<string, bigint> = { ns: 1n, us: 1000n, "µs": 1000n, ms: 1000000n, s: 1000000000n, m: 60000000000n, h: 3600000000000n, d: 86400000000000n, w: 604800000000000n, y: 31536000000000000n }; let total = 0n; for (const [, amount, unit] of text.matchAll(/(\d+)(ns|us|µs|ms|s|m|h|d|w|y)/g)) total += BigInt(amount) * units[unit]; return total; };
export const bindings = scope({

Timer: {
  id: 'string',
  limit: [{ '+': 'reject', secs: 'number.integer >= 0', nanos: '0 <= number.integer < 1000000000' }, ':', (v) => ((nanos) => nanos !== null && nanos <= 28800000000000n)(durationNanos(v))],
  grace: [[[{ '+': 'reject', secs: 'number.integer >= 0', nanos: '0 <= number.integer < 1000000000' }, ':', (v) => ((nanos) => nanos !== null && nanos > 60000000000n)(durationNanos(v))], '|', 'undefined'], '|', 'null'],
  laps: [{ '+': 'reject', secs: 'number.integer >= 0', nanos: '0 <= number.integer < 1000000000' }, '[]']
},

});

const exported = bindings.export();

export const defaultTimer: Timer = {
id: "",
limit: { secs: 0, nanos: 0 },
grace: null,
laps: []
};

export type Timer = typeof exported.Timer.infer;
