evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_enum_adjacently_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const bindings = scope({

Event: [[{ t: ['===', "Click"], c: 'ClickData' }, '|', { t: ['===', "KeyPress"], c: 'string' }], '|', { t: ['===', "Scroll"] }],
ClickData: {
  x: 'number',
  y: 'number'
},

});

const exported = bindings.export();

export const defaultClickData: ClickData = {
x: 0,
y: 0
};

export type Event = typeof exported.Event.infer;
export type ClickData = typeof exported.ClickData.infer;
