evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_enum_externally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const bindings = scope({

Status: [[[['===', 'Active'], '|', ['===', 'Inactive']], '|', ['===', 'Pending']], '|', ['===', 'Suspended']],

});

const exported = bindings.export();


export type Status = typeof exported.Status.infer;
