evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_enum_internally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const bindings = scope({

Shape: [[[{ type: ['===', "Circle"] }, '&', 'CircleData'], '|', [{ type: ['===', "Rectangle"] }, '&', 'RectangleData']], '|', { type: ['===', "Point"] }],
CircleData: {
  radius: 'number'
},
RectangleData: {
  width: 'number',
  height: 'number'
},

});

const exported = bindings.export();

export const defaultCircleData: CircleData = {
radius: 0
};
export const defaultRectangleData: RectangleData = {
width: 0,
height: 0
};

export type Shape = typeof exported.Shape.infer;
export type CircleData = typeof exported.CircleData.infer;
export type RectangleData = typeof exported.RectangleData.infer;
