evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_enum_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const bindings = scope({

Value: [[['string', '|', 'number'], '|', 'boolean'], '|', 'null'],

});

const exported = bindings.export();

export type Value = typeof exported.Value.infer;
