evenframe_core/tests/snapshots/snapshot_tests__arktype__arktype_foreign_types.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const bindings = scope({

Appointment: {
  id: 'string',
  title: 'string',
  scheduledAt: 'string',
  duration: 'number',
  cancelledAt: [['string', '|', 'undefined'], '|', 'null']
},

});

const exported = bindings.export();

export type Appointment = typeof exported.Appointment.infer;
